# nl-fhir

./: .bandit  .dockerignore  .env  .env.example  .gitignore  .mutmut-config.py  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_FACT_CHECK.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_SETUP.md  Dockerfile  LICENSE  Makefile  PHASE1_REVIEW_GUIDE.md  QUICK_START.md  README.md  README_CLINICAL_BATCH.md  SECURITY.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_INFRASTRUCTURE_RECOVERY_COMPLETE.md  configuration_optimization.py  docker-compose.prod-minimal.yml  docker-compose.prod.yml  docker-compose.yml  final_f1_target_validation.py  first_request.json  medical_accuracy_analysis_report.md  medspacy_integration_test_20251017_221321.json  migration_validation_report_20250914_162707.json  mine_clinicaltrials_text.py  process_clinical_batch.py  production_f1_validation.py  pyproject.toml  quick_f1_validation.py  quick_story_4_test.py  quick_test_fixes.py  railway.toml  (+50 more)
.bmad-core/: install-manifest.yaml
.claude/: statusline.sh
.github/: PULL_REQUEST_CHECKLIST.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-v2.yml.reference  ci.yml  reusable-test.yml.reference
.serena/: project.yml
.serena/memories/: brownfield_test_architecture_analysis.md  completion_criteria.md  development_workflow.md  project_purpose.md  project_structure.md  suggested_commands.md  tech_stack.md
.specify/memory/: constitution.md
clinical_results/: batch_1757646432.json  cardiology_batch_results.json  dermatology_batch_results.json  emergency_batch_results.json  endocrinology_batch_results.json  fhir_compliance_test.json  gastroenterology_batch_results.json  geriatric_batch_results.json  hapi_fhir_validation_results.json  hematology_batch_results.json  infectious_disease_batch_results.json  negative_validation_results_20250911_224718.json  nephrology_batch_results.json  obgyn_batch_results.json  oncology_batch_results.json  palliative_medicine_batch_results.json  pediatric_batch_results.json  performance_summary.csv  psychiatry_batch_results.json  pulmonology_batch_results.json  rheumatology_batch_results.json  specialty_analysis.csv  sports_medicine_batch_results.json  🌿_allergy_&_immunology_batch_results.json  👂_ent_batch_results.json  💊_pain_management_batch_results.json  🧫_urology_batch_results.json  🧬_endocrine_surgery_batch_results.json
deployment/scripts/: deploy.sh  health-check.sh  rollback.sh
docs/: API_RESPONSE_FIX_DOCUMENTATION.md  BRANCH_PROTECTION_SETUP.md  EPIC_4_DEVELOPMENT_HANDOVER.md  EPIC_6_COMPLETION.md  EPIC_7_COMPLETION_SUMMARY.md  EPIC_7_PHASE_1A_SUMMARY.md  EPIC_7_PHASE_1B_SUMMARY.md  EPIC_7_PHASE_1C_SUMMARY.md  EPIC_7_PHASE_1C_VALIDATION.md  EPIC_7_PHASE_1_COMPLETE.md  EPIC_7_PHASE_1_FINDINGS.md  EPIC_7_STATUS.md  EPIC_IW_001_COMPLETION.md  FHIR_Implementation_Todo_List.md  FHIR_R4_Implementation_Roadmap.md  FHIR_R4_Resources.csv  GOAL_IMPLEMENTATION_COMPLETE.md  HAPI_VALIDATION_FIX_DOCUMENTATION.md  MEDICAL_SAFETY.md  NL_FHIR_PRD_v1.6_full_with_copyright.md  PHASE_2_COMPLETION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READINESS_ROADMAP.md  REFACTOR_EPIC_1_COMPLETION.md  RELATEDPERSON_IMPLEMENTATION_REVIEW.md  RELATED_PERSON_IMPLEMENTATION_COMPLETE.md  TEST_AUDIT_REPORT.md  TEST_CLEANUP_RECOMMENDATIONS.md  brownfield-architecture.md  faulty-orders.json  llm-output-parsing-methodology.md  refactoring-architecture.md  refactoring-prd.md  refactoring-rollback-testing-plan.md  sample -patient-encounter-notes.txt
docs/adr/: 001-production-readiness-architecture.md
docs/architecture/: NLP_REFACTORING_GUIDE.md  coding-standards.md  epic-2-3tier-nlp-architecture.md  epic-2-4tier-nlp-architecture.md  epic-4-impact-analysis.md  epic-4-technical-architecture.md  epic-integration-architecture.md  f1-score-optimization-architecture.md
docs/epics/: README.md  epic-1-input-layer.md  epic-10-advanced-future.md  epic-2-nlp-pipeline.md  epic-2.5-medspacy-integration.md  epic-3-fhir-assembly.md  epic-4-reverse-validation.md  epic-5-infrastructure.md  epic-6-critical-foundation.md  epic-7-clinical-coverage-expansion.md  epic-8-specialized-workflows.md  epic-9-infrastructure-compliance.md  epic-infusion-workflow.md  infusion-workflow-summary.md
docs/marketing/: linkedin_v1.1.0_bmad_post.md  linkedin_v1.1.0_post.md
docs/operations/: RUNBOOK.md  railway-deploy.md  railway-variables-setup.md
docs/prd/: 1-overview.md  10-test-data-generation-validation.md  (+28 more)
scripts/: README.md  README_PERFORMANCE.md  bmad-branch-cleanup.sh  docker-prod-build.sh  docker-prod-start.sh  docker-prod-stop.sh  enforce_file_limits.py  install_spacy_models.py  performance_baseline.py  pre-pr-check.py  test_performance_monitor.sh  validate_phase1_tests.sh
static/: script.js  styles.css
templates/: index.html
tests/: DiagnosticReport_Implementation_Guide.md  conftest.py  quick_test_epic7_factories.py  quick_validate_communication_request.py  quick_validate_goal.py  quick_validate_imaging_study.py  quick_validate_relatedperson.py  quick_validate_risk_assessment.py  run_comprehensive_tests.py  run_diagnostic_report_tests.py  test_advanced_fhir_validation.py  test_bundle_assembly.py  test_consent_hapi_validation.py  test_conversion_vitals_extraction.py  test_diagnostic_report.py  test_diagnostic_report_integration.py  test_epic10_advanced_future.py  test_epic10_consolidated.py  test_epic10_final.py  test_epic10_streamlined.py  test_epic7_clinical_coverage_expansion.py  test_epic7_consolidated.py  test_epic7_smoke_test.py  test_epic8_specialized_workflows.py  test_epic9_infrastructure_compliance.py  test_epic_2_integration.py  test_epic_3_fhir_integration.py  test_epic_4_summarization_and_safety.py  test_epic_6_complete_validation.py  test_error_handling_comprehensive.py  test_fhir_core.py  test_infusion_workflow_resources.py  test_integration_epic_1.py  test_main.py  test_model_warmup.py  test_observation_creation.py  test_organized_structure.py  test_performance_benchmarking.py  test_performance_integration.py  test_performance_monitoring.py  (+8 more)
(+385 files in other folders)
